--- a/_includes/banner-newsletter.html
+++ b/_includes/banner-newsletter.html
@@ -7,7 +7,7 @@
         <form class="col-sm-10 " action="{{site.newsletterdata.action}}">
             <h1 class="mb-2 mb-md-4" name="newsletter">Newsletter</h1>
             <p class="banner-newsletter__text white-text font-serif mb-2 mb-md-4 w-100 mw-md-50">Iscriviti alla
-                newsletter per ricevere aggiornamenti e novità. È una mailing list a basso traffico (promesso!) ma ti
+                newsletter per ricevere aggiornamenti e novità. È una mailing list a basso traffico (promesso!) che ti
                 aiuterà a rimanere in contatto con noi.</p>
             {% for input in site.newsletterdata.hidden-inputs %}
             <input type="hidden" name="{{input.name}}" value="{{input.value}}">
